--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="hero" title="digital marketing meeting"></div>
-
+    <!--Content.--> 
     <main>
         <section id="search-engine-optimization" class="content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -35,7 +35,7 @@
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </section>
         <section id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -53,14 +53,14 @@
     </main>
 
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
